--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.cleanup.todoc"
+        applicationId "com.cleanup.todocGuzzler"
         minSdkVersion 21
+        //noinspection OldTargetApi
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
